# coding-resources

./: README.md  ai-frequency-comm.md  beginners-guide.md  confusion.md  full-stack.md  hackathon-guide.md  linkedin.md  money-hacks.md  placement.md  pyproject.toml  scholarships.md  strategy.md  youtube.md
agent_suite/: README.md  __init__.py  config.py  pyproject.toml
agent_suite/agent_suite/: __init__.py
agent_suite/agent_suite/agents/: __init__.py  base.py  comms.py  jd_parser.py  profile.py  resume.py  search.py  sender.py  tracker.py
agent_suite/agent_suite/api/: __init__.py  main.py
agent_suite/agent_suite/api/routers/: __init__.py  workflow.py
agent_suite/agent_suite/assets/: evaluation_plan.md
agent_suite/agent_suite/config/: __init__.py  settings.py
agent_suite/agent_suite/data/: ats_keywords.json  sample_jobs.json
agent_suite/agent_suite/db/: __init__.py  base.py  models.py  schema.sql
agent_suite/agent_suite/services/: __init__.py  comms_builder.py  email_sender.py  embedding.py  jd_parser.py  job_search.py  resume_builder.py  tracker.py
agent_suite/agent_suite/templates/: cover_letter_template.j2  recruiter_email_template.j2  resume_template.j2
agent_suite/agent_suite/workflows/: __init__.py  application_flow.py
agent_suite/agents/: __init__.py  base.py  comms.py  jd_parser.py  profile.py  resume.py  review.py  search.py  sender.py  tracker.py
agent_suite/api/: __init__.py  server.py
agent_suite/data/: ats_keywords.json  sample_jobs.json
agent_suite/db/: models.py  session.py
agent_suite/scripts/: run_example.py
agent_suite/tests/: conftest.py  test_workflow.py
agent_suite/utils/: embeddings.py  telemetry.py
agent_suite/workflows/: __init__.py  career_pipeline.py  state.py
database/: schema.sql
examples/: pipeline_request.json
firebase-excel-app/: README.md  index.html  package-lock.json  package.json
firebase-excel-app/src/: App.jsx  styles.css
langgraph/: __init__.py  graph.py
scripts/: example_run.py
tests/: test_pipeline.py
