[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-suite"
version = "0.1.0"
description = "Agent Suite – AI-Powered Career Assistant built with LangGraph"
authors = [{name = "Agent", email = "agent@example.com"}]
readme = "agent_suite/README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.0.50",
    "langchain>=0.1.20",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.0",
    "python-docx>=1.1.0",
    "reportlab>=4.1.0",
    "jinja2>=3.1.3",
    "networkx>=3.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning"
]
