[tool.poetry]
name = "agent-suite"
version = "0.1.0"
description = "Agent Suite – AI-Powered Career Assistant built with LangGraph"
authors = ["Agent Developer <agent@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "agent_suite"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
langchain = "^0.2.0"
langgraph = "^0.0.40"
langchain-openai = "^0.1.6"
httpx = "^0.27.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
SQLAlchemy = "^2.0.29"
asyncpg = "^0.29.0"
pgvector = "^0.2.5"
psycopg2-binary = "^2.9.9"
python-docx = "^1.1.0"
reportlab = "^4.0.9"
Jinja2 = "^3.1.3"
playwright = "^1.43.0"
beautifulsoup4 = "^4.12.3"
selectolax = "^0.3.17"
requests = "^2.31.0"
typing-extensions = "^4.10.0"
structlog = "^24.1.0"
prometheus-client = "^0.20.0"
sentry-sdk = "^1.43.0"
faiss-cpu = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
